@@ -2,7 +2,7 @@
 
 A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and modern search techniques.
 
-**Current Version:** 1.0.3.0 (NNUE Release - November 2025)
+**Current Version:** 1.0.4.0 (NNUE Release - November 2025)
 
 ## Features
 
@@ -13,6 +13,7 @@ A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and moder
 - **Principal Variation Search (PVS)** with aspiration windows
 - **Late Move Reductions (LMR)**
 - **Internal Iterative Reductions (IIR)**
+- **Late Move Pruning (LMP)**
 - **Null Move Pruning**
 - **Reverse Futility Pruning**
 - **Quiescence Search** with SEE pruning
