@@ -3,7 +3,7 @@
 #include "Interface.h"
 
 void Interface::loop(Engine& e){
-    std::string versionStr = "Wilted 1.0.3.0";
+    std::string versionStr = "Wilted 1.0.4.0";
 
     std::cout << versionStr << " by TheTilted096\n";
 
