@@ -98,6 +98,9 @@ template <bool isMaster> class Searcher{
         const std::array<Score, 6> SEEvals = {10000, 900, 500, 300, 300, 100};
         const Depth minIIRdepth = 3;
         const Depth IIRbase = 1;
+        const Count LMPbase = 3;
+        const Count LMPlin = 1;
+        const Count LMPquad = 1;
 };
 
 extern template class Searcher<true>;
